--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -29,3 +29,24 @@
   transition: 0.8s;
   user-select: none;
 }
+.workoutListItems {
+  font-size: 30px;
+  color: white;
+  height: 20px;
+  display: flex;
+  padding: 10px;
+  text-decoration: underline rgb(0, 0, 0,0.7);
+}
+.workoutListItemsContainer {
+  position: absolute;
+  width: 40%;
+  height: 20%;
+  display: flex;
+  justify-content: normal;
+  flex-wrap: wrap;
+}
+.externalContainer {
+  height: 50vh;
+  width: 50vw;
+  border: 5px solid rgb(73, 70, 70);
+}
