--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -35,7 +35,7 @@
   height: 20px;
   display: flex;
   padding: 10px;
-  text-decoration: underline rgb(0, 0, 0,0.7);
+  text-decoration: underline rgb(0, 0, 0, 0.7);
 }
 .workoutListItemsContainer {
   position: absolute;
