--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -42,8 +42,10 @@
   width: 40%;
   height: 20%;
   display: flex;
-  justify-content: normal;
+  justify-content: space-around;
   flex-wrap: wrap;
+  color: white;
+  
 }
 .externalContainer {
   height: 50vh;
