--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -30,21 +30,27 @@
   user-select: none;
 }
 .workoutListItemsContainer {
-  width: 50%;
-  height: 20%;
+  width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   color: white;
 }
 .externalContainer {
   top: 10%;
   position: absolute;
-
   height: 50vh;
-  width: 100vw;
+  display: flex;
+  width: 60%;
   border: 5px solid rgb(73, 70, 70);
 }
 .workoutItem {
   font-size: 30px;
+}
+.itemBox {
+  align-content: start;
+  width: 286px;
+  text-align: center;
+  border: 1px solid black;
 }
